# modern-python-template

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
reports/: flake8-stats.txt
src/modern_python_template/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
