[tool.poetry]
name = "modern-python-template"
version = "0.1.0"
description = "The Hypermordern Python Project"
authors = ["Vivek Tripathi <ervivekwisdom@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/VivekWisdom/modern-python-template"
repository = "https://github.com/VivekWisdom/modern-python-template"

[tool.poetry.scripts]
modern-python-template = "modern_python_template.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python_template"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-import-order = "^0.18.1"
safety = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
